<resources>
    <string name="app_name">p7</string>
    <string name="str_ok">OK</string>
    <string name="str_no">NO</string>
    <string name="str_date">DATE</string>


    <!--activity Register-->
    <string name="str_title_register">Record Lunch Date</string>
    <string name="str_number_init">07</string>
    <string name="str_date_now">2019/02/12</string>
    <string name="str_list_options">List Options</string>
</resources>

